<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle_rounded_blue"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dishInCategoryBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape_rectange_rounded_white"
        android:paddingBottom="5dp">


        <TextView
            android:id="@+id/dishInCategoryNameTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/base_dish_name"
            android:textSize="26sp"
            android:textColor="@color/black"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/selectDishInCategoryImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dishInCategoryNameTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_right" />

        <ImageView
            android:id="@+id/costDishInCategoryImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dishInCategoryNameTextView"
            app:srcCompat="@drawable/ic_cash" />

        <TextView
            android:id="@+id/costDishInCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/base_int"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/costDishInCategoryImageView"
            app:layout_constraintStart_toEndOf="@+id/costDishInCategoryImageView"
            app:layout_constraintTop_toTopOf="@+id/costDishInCategoryImageView" />

        <TextView
            android:id="@+id/weightDishInCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="26sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/costDishInCategoryImageView"
            app:layout_constraintTop_toBottomOf="@+id/costDishInCategoryImageView" />

        <TextView
            android:id="@+id/weightValueDishInCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/base_int"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/weightDishInCategoryTextView"
            app:layout_constraintStart_toStartOf="@+id/costDishInCategoryTextView"
            app:layout_constraintTop_toTopOf="@+id/weightDishInCategoryTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>