<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dish.DishFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dishImageBackground"
            android:layout_width="330dp"
            android:layout_height="150dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/shape_rectange_rounded_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:src="@mipmap/dish1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/shape_rectange_rounded_white"
            android:maxHeight="340dp"
            app:layout_constraintBottom_toTopOf="@+id/plusBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dishImageBackground">

            <TextView
                android:id="@+id/dishNameTextView"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="1dp"
                android:text="@string/base_dish_name"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/delimiterNameDesc"
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/shape_rectangle_rounded_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dishNameTextView" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:maxHeight="125dp"
                android:layout_marginTop="1dp"
                android:textColor="@color/black"
                android:scrollbars="vertical"
                android:text="@string/base_dish_description"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/dishNameTextView"
                app:layout_constraintTop_toBottomOf="@+id/delimiterNameDesc" />

            <View
                android:id="@+id/delimiterDescCost"
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/shape_rectangle_rounded_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <ImageView
                android:id="@+id/costImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/ic_cash"
                app:layout_constraintBottom_toTopOf="@+id/weightImageView"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toTopOf="@+id/delimiterDescCost" />

            <TextView
                android:id="@+id/costTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/base_int"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/costImageView"
                app:layout_constraintStart_toEndOf="@+id/costImageView"
                app:layout_constraintTop_toTopOf="@+id/costImageView" />

            <TextView
                android:id="@+id/weightImageView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="7dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/costImageView" />

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/base_int"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/weightImageView"
                app:layout_constraintStart_toEndOf="@+id/weightImageView"
                app:layout_constraintTop_toTopOf="@+id/weightImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/plusBackground"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_circle_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="45dp"
            android:src="@drawable/ic_plus_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/backBackground"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_circle_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="45dp"
            android:src="@drawable/ic_arrow_left_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>